# cai_golay.rs

./: Cargo.toml  License  Readme.md
scripts/: ext.py  std.py
src/: extended.rs  lib.rs  standard.rs
